# rust-by-example-practice

./: .gitignore  1_raii  Cargo.toml  README.md
ch01_hello_world/: ch01_notes.md
ch01_hello_world/src/: main.rs
ch02_primitives/: Cargo.toml  ch02_notes.md
ch03_custom_types/: Cargo.toml  ch03.md
ch04_variable_bindings/: Cargo.toml  ch04_notes.md
ch05_types/: Cargo.toml  ch05_notes.md
ch06_conversion/: Cargo.toml  ch06_notes.md
ch07_expressions/: Cargo.toml  ch07_notes.md
ch08_flow_control/: Cargo.toml  ch08_notes.md
ch08_flow_control/src/: main.rs
ch09_functions/: Cargo.toml  ch09_notes.md
ch10_modules/: Cargo.toml  ch10_notes.md
ch11_crates/: Cargo.toml  ch11_notes.md
ch12_cargo/: Cargo.toml  ch12_notes.md  ferris.txt
ch13_attributes/: Cargo.toml  ch13_notes.md
ch14_generics/: Cargo.toml  ch14_ntoes.md
ch14_generics/src/: main.rs
ch15_scoping_rules/: Cargo.toml  ch15_notes.md
ch16_traits/: Cargo.toml  ch16_notes.md
ch17_macros/: Cargo.toml  ch17_notes.md
ch18_error_handling/: Cargo.toml  ch18_notes.md
ch19_std_library_types/: Cargo.toml  ch19_notes.md
ch20_std_misc/: Cargo.toml  ch20_notes.md
ch21_testing/: Cargo.toml  ch21_notes.md
ch22_unsafe_operations/: Cargo.toml  ch22_notes.md
ch23_compatibility/: Cargo.toml
ch23_compatibility/src/: main.rs
ch24_meta/: Cargo.toml  ch24_notes.md
